<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <groupId>pl.ds.bulma</groupId>
  <artifactId>bulma</artifactId>
  <version>1.3.8</version>

  <name>Bulma Components Project</name>
  <packaging>pom</packaging>

  <modules>
    <module>application</module>
    <module>content</module>
    <module>distribution</module>
    <module>tests</module>
  </modules>

  <licenses>
    <license>
      <name>Apache License Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
    </license>
  </licenses>

  <scm>
    <connection>scm:git:git://github.com/websight-io/bulma.git</connection>
    <developerConnection>scm:git:git@github.com:websight-io/bulma.git</developerConnection>
    <url>https://github.com/websight-io/bulma</url>
    <tag>v1.3.8</tag>
  </scm>

  <organization>
    <name>Dynamic Solutions sp. z o.o. sp. k.</name>
    <url>https://websight.io</url>
  </organization>

  <repositories>
    <repository>
      <id>websight-repo</id>
      <url>https://repo.websight.io/maven/</url>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
  </repositories>

  <properties>
    <!-- generic -->
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>

    <!-- base docker distributions -->
    <docker.cms-project.name>websight-cms-bulma-project</docker.cms-project.name>
    <docker.cms-project.tag>latest</docker.cms-project.tag>
    <docker.nginx.name>nginx-bulma-project</docker.nginx.name>
    <docker.nginx.tag>latest</docker.nginx.tag>

    <!-- admin user default credentials for tests -->
    <websight.admin.username>wsadmin</websight.admin.username>
    <websight.admin.password>wsadmin</websight.admin.password>
    <websight.admin.omitAdminPw>true</websight.admin.omitAdminPw>

    <!-- WebSight CMS Version -->
    <websight.cms.version>1.15.0</websight.cms.version>
    <!-- WebSight Dependencies Versions -->
    <websight.rest.version>1.0.10</websight.rest.version>
    <websight.pages.version>3.0.0</websight.pages.version>
    <websight.request.parameters.version>1.0.5</websight.request.parameters.version>
    <websight.ui.actions.version>2.0.0</websight.ui.actions.version>
    <websight.fragments.registry.version>1.0.3</websight.fragments.registry.version>

    <timestamp>${maven.build.timestamp}</timestamp>
    <maven.build.timestamp.format>yyyyMMddHHmm</maven.build.timestamp.format>

    <checkstyle.severity.level>warning</checkstyle.severity.level>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>pl.ds.websight</groupId>
        <artifactId>websight-cms-ce-feature</artifactId>
        <version>${websight.cms.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <version>3.2.0</version>
        <configuration>
          <configLocation>google_checks.xml</configLocation>
          <consoleOutput>true</consoleOutput>
          <encoding>UTF-8</encoding>
          <failsOnError>true</failsOnError>
          <failOnViolation>true</failOnViolation>
          <violationSeverity>${checkstyle.severity.level}</violationSeverity>
          <suppressionsLocation>google_checks_suppressions.xml</suppressionsLocation>
          <suppressionsFileExpression>checkstyle.suppressions.file</suppressionsFileExpression>
        </configuration>
        <dependencies>
          <dependency>
            <groupId>com.puppycrawl.tools</groupId>
            <artifactId>checkstyle</artifactId>
            <version>10.3.4</version>
          </dependency>
        </dependencies>
        <executions>
          <execution>
            <id>checkstyle</id>
            <phase>process-classes</phase>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.rat</groupId>
        <artifactId>apache-rat-plugin</artifactId>
        <version>0.14</version>
        <executions>
          <execution>
            <phase>validate</phase>
            <goals>
              <goal>check</goal>
            </goals>
            <configuration>
              <excludes>
                <exclude>**/*.bnd</exclude>
                <exclude>**/*.md</exclude>
                <exclude>**/*.json</exclude>
                <exclude>**/*.txt</exclude>
                <exclude>**/.content.xml</exclude>
              </excludes>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-release-plugin</artifactId>
        <version>3.0.0-M6</version>
        <configuration>
          <tagNameFormat>v@{project.version}</tagNameFormat>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>versions-maven-plugin</artifactId>
        <version>2.11.0</version>
        <configuration>
          <allowSnapshots>true</allowSnapshots>
          <includeProperties>websight.cms.version</includeProperties>
        </configuration>
      </plugin>
    </plugins>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>io.fabric8</groupId>
          <artifactId>docker-maven-plugin</artifactId>
          <!-- Please do not upgrade to 0.40.2 as there is an issue with multi-platforms support -->
          <version>0.40.1</version>
        </plugin>
      </plugins>
    </pluginManagement>
    <extensions>
      <extension>
        <groupId>com.github.seahen</groupId>
        <artifactId>maven-s3-wagon</artifactId>
        <version>1.3.3</version>
      </extension>
    </extensions>
  </build>

  <profiles>
    <profile>
      <id>code-artifact-distribution</id>
      <distributionManagement>
        <repository>
          <id>ws-code-artifact-repo</id>
          <name>ws-code-artifact-repo</name>
          <url>https://websight-${env.AWS_ACCOUNT_ID}.d.codeartifact.eu-central-1.amazonaws.com/maven/maven-repo/</url>
        </repository>
        <snapshotRepository>
          <id>ws-code-artifact-snapshot-repo</id>
          <name>ws-code-artifact-snapshot-repo</name>
          <url>https://websight-internal-${env.AWS_ACCOUNT_ID}.d.codeartifact.eu-central-1.amazonaws.com/maven/maven-snapshot-repo/</url>
        </snapshotRepository>
      </distributionManagement>
    </profile>

    <profile>
      <id>s3-distribution</id>
      <distributionManagement>
        <repository>
          <id>ws-s3-repo</id>
          <name>ws-s3-repo</name>
          <url>s3://repo.websight.io/maven</url>
        </repository>
      </distributionManagement>
    </profile>
  </profiles>

</project>
